--- a/gb/19/10/31/n11623612.md
+++ b/gb/19/10/31/n11623612.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wfruxc2424/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wfruxc2424/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/wfruxc2424/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/wfruxc2424/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/wfruxc2424/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wfruxc2424/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/wfruxc2424/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/wfruxc2424/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/wfruxc2424/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/wfruxc2424/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/wfruxc2424/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/wfruxc2424/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/wfruxc2424/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/wfruxc2424/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/wfruxc2424/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/wfruxc2424/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/wfruxc2424/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/wfruxc2424/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/wfruxc2424/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/wfruxc2424/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/wfruxc2424/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/wfruxc2424/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/wfruxc2424/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/wfruxc2424/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/wfruxc2424/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/wfruxc2424/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/wfruxc2424/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/wfruxc2424/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/wfruxc2424/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/wfruxc2424/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzd1/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/wfruxc2424/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/wfruxc2424/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/wfruxc2424/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/wfruxc2424/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/wfruxc2424/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/wfruxc2424/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/wfruxc2424/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/wfruxc2424/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/wfruxc2424/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/wfruxc2424/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/wfruxc2424/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/wfruxc2424/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/wfruxc2424/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/wfruxc2424/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/wfruxc2424/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>专家：奥克兰房市将回暖 或带动全国房价</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2017/04/getty-image-Auckland.jpg" />
 <h6>(图片来源：Getty Image/Matteo Colombo)
 </h6>
 <hr>
-<p>【大纪元2019年10月31日讯】（大纪元记者李扪心编译报导）专家预测，<ahref="https://github.com/wfruxc2424/djy/blob/master/gb/tag/%E5%A5%A5%E5%85%8B%E5%85%B0.md#1">奥克兰</a>的下一波<ahref="https://github.com/wfruxc2424/djy/blob/master/gb/tag/%E6%88%BF%E5%B8%82.md#1">房市</a>热潮可能正在开始，<ahref="https://github.com/wfruxc2424/djy/blob/master/gb/tag/%E5%85%A8%E5%9B%BD.md#1">全国</a>的房市稍晚也会跟进。虽然下一轮<ahref="https://github.com/wfruxc2424/djy/blob/master/gb/tag/%E6%88%BF%E4%BB%B7.md#1">房价</a>的的涨势可能不会像之前几次那样凶猛，但专家仍警告首次<ahref="https://github.com/wfruxc2424/djy/blob/master/gb/tag/%E4%B9%B0%E6%88%BF%E8%80%85.md#1">买房者</a>尽快购买，否则很可能会被永远地拒在房市之外。</p>
-<h2><ahref="https://github.com/wfruxc2424/djy/blob/master/gb/tag/%E5%A5%A5%E5%85%8B%E5%85%B0.md#1">奥克兰</a><ahref="https://github.com/wfruxc2424/djy/blob/master/gb/tag/%E6%88%BF%E4%BB%B7.md#1">房价</a>或暴涨 最早可能开始于明年</h2>
+<p>【大纪元2019年10月31日讯】（大纪元记者李扪心编译报导）专家预测，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A5%A5%E5%85%8B%E5%85%B0.md#1">奥克兰</a>的下一波<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%88%BF%E5%B8%82.md#1">房市</a>热潮可能正在开始，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%85%A8%E5%9B%BD.md#1">全国</a>的房市稍晚也会跟进。虽然下一轮<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%88%BF%E4%BB%B7.md#1">房价</a>的的涨势可能不会像之前几次那样凶猛，但专家仍警告首次<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B9%B0%E6%88%BF%E8%80%85.md#1">买房者</a>尽快购买，否则很可能会被永远地拒在房市之外。</p>
+<h2><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A5%A5%E5%85%8B%E5%85%B0.md#1">奥克兰</a><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%88%BF%E4%BB%B7.md#1">房价</a>或暴涨 最早可能开始于明年</h2>
 <p>新西兰先驱报（NZ Herald）的报导认为，创记录的低房贷利率、持续恶化的住房短缺问题、相对大量的外来人口涌入大城市，以及日益增长的房地产投资者信心，都是推动价格上涨的潜在的、不可抗拒的动力。</p>
 <p>西太平洋银行（Westpac）的经济学家们预测，奥克兰明年的房价将上涨5％，在2021年涨幅更会进一步加大，达到7.5％。</p>
-<p>西太平洋银行（Westpac）首席经济学家多米尼克?斯蒂芬斯（Dominick Stephens）表示，此前的两、三个<ahref="https://github.com/wfruxc2424/djy/blob/master/gb/tag/%E6%88%BF%E5%B8%82.md#1">房市</a>繁荣周期，都是在银行突然降低了其房屋贷款利率之后发生的，这次应该也不例外。</p>
+<p>西太平洋银行（Westpac）首席经济学家多米尼克?斯蒂芬斯（Dominick Stephens）表示，此前的两、三个<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%88%BF%E5%B8%82.md#1">房市</a>繁荣周期，都是在银行突然降低了其房屋贷款利率之后发生的，这次应该也不例外。</p>
 <p>他说：“我们现在看到房贷利率又突然下降，这就是为什么我们将会看到房价上涨的原因。”</p>
 <p>不过与这个奥克兰房市转暖的预测相反，由于过去两年住房价格的缓慢下跌和特别潮湿沉闷的冬季，目前的奥克兰房屋市场仍然乍暖还寒，似乎仍然有点冷清。</p>
 <p>去年，澳大利亚房市崩盘和悉尼房价下跌多达20％的传闻，也令新西兰买家感到震惊；不过澳大利亚房市现在似乎已经走出困境，并且随着气候先行转暖而开始反弹。</p>
@@ -28,7 +28,7 @@
 <p>埃文斯说，这个问题只会在即将到来的又一波房市繁荣中恶化，因为房价上涨将会从已经相当高的房价基础上开始。</p>
 <p>首次购房者在房市繁荣时期买房，往往也没有很多选择，这是因为开发商为了获得最大的利润，往往都会建造更高价的房屋和联排别墅，而不会建造更多可负担的房屋。</p>
 <p>房地产网站OneRoof的专栏作家阿什利?车奇（Ashley Church）预测，房价涨幅要比上面预测的更猛烈一些。他预测，下一次房市繁荣可能会持续到2026年至2027年，房屋价格将上涨70％至100％，也就是说，涨幅最大可以翻番，这会进一步加剧首次购房者面临的挑战。</p>
-<p>车奇表示，如果接下来这一波房市热潮与之前的类似，那么应该可以看到<ahref="https://github.com/wfruxc2424/djy/blob/master/gb/tag/%E5%85%A8%E5%9B%BD.md#1">全国</a>的房价都要随后跟着水涨船高。一些现在房价常见在60万左右的城市，如耐皮尔（Napier）、尼尔森（Nelson）、新普利茅斯（New Plymouth）、和北帕（Palmerston North）等城市，在下一轮房市繁荣高峰时，会看到房价上涨到100万元。只是其他地方的房地产热潮，来的比奥克兰要晚一些。</p>
+<p>车奇表示，如果接下来这一波房市热潮与之前的类似，那么应该可以看到<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%85%A8%E5%9B%BD.md#1">全国</a>的房价都要随后跟着水涨船高。一些现在房价常见在60万左右的城市，如耐皮尔（Napier）、尼尔森（Nelson）、新普利茅斯（New Plymouth）、和北帕（Palmerston North）等城市，在下一轮房市繁荣高峰时，会看到房价上涨到100万元。只是其他地方的房地产热潮，来的比奥克兰要晚一些。</p>
 <p>OneRoof的编辑欧文?沃恩（Owen Vaughan）则担心，在最近的拍卖会引发了激烈的竞购战之后，已经有迹象表明一些买家“害怕错过”或“紧张担心”的心态正在回升。</p>
 <p>沃恩说：“很可能会有一波首次购房者，他们对房市繁荣时期的拍卖情况没有任何经验，就会发现他们对自己认为在价格范围内的房产，出价过高。”</p>
 <p>他警告准买家们在竞拍之前，要进行详细的调查，以“避免陷入昂贵而又令人沮丧的循环中”。</p>
@@ -51,42 +51,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/wfruxc2424/djy/blob/master/gb/19/9/23/n11539811.md#1">新西兰企鹅跋涉2500公里 于澳洲获救</a></li>
-<li><a href="https://github.com/wfruxc2424/djy/blob/master/gb/19/9/24/n11544429.md#1">2018年人口普查：新西兰人口更多更多样化</a></li>
-<li><a href="https://github.com/wfruxc2424/djy/blob/master/gb/19/9/26/n11548023.md#1">旅客量不足 捷星将关闭五条新西兰航线</a></li>
-<li><a href="https://github.com/wfruxc2424/djy/blob/master/gb/19/9/29/n11555354.md#1">反中共迫害人权 维吾尔人在纽发声</a></li>
-<li><a href="https://github.com/wfruxc2424/djy/blob/master/gb/19/9/30/n11558556.md#1">今年烟花节 Countdown不卖烟花</a></li>
-<li><a href="https://github.com/wfruxc2424/djy/blob/master/gb/19/10/1/n11558754.md#1">戈壁东：海外民运为中共国殇送终</a></li>
-<li><a href="https://github.com/wfruxc2424/djy/blob/master/gb/19/10/1/n11559320.md#1">新西兰邮政因信件数量下降亏损1.21亿元</a></li>
-<li><a href="https://github.com/wfruxc2424/djy/blob/master/gb/19/10/29/n11620315.md#1">传香港“光头警长”儿子留学新西兰被拒</a></li>
-<li><a href="https://github.com/wfruxc2424/djy/blob/master/gb/20/4/16/n12034925.md#1">瘟疫爆发前 全国房价创新高</a></li>
-<li><a href="https://github.com/wfruxc2424/djy/blob/master/gb/20/4/14/n12028499.md#1">封城之下：家族企业Safari集团靠谱基因优势凸显</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/9/23/n11539811.md#1">新西兰企鹅跋涉2500公里 于澳洲获救</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/9/24/n11544429.md#1">2018年人口普查：新西兰人口更多更多样化</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/9/26/n11548023.md#1">旅客量不足 捷星将关闭五条新西兰航线</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/9/29/n11555354.md#1">反中共迫害人权 维吾尔人在纽发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/9/30/n11558556.md#1">今年烟花节 Countdown不卖烟花</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/10/1/n11558754.md#1">戈壁东：海外民运为中共国殇送终</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/10/1/n11559320.md#1">新西兰邮政因信件数量下降亏损1.21亿元</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/10/29/n11620315.md#1">传香港“光头警长”儿子留学新西兰被拒</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/3/25/n12834072.md#1">新西兰政府住房新政：谁受益？谁担忧？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/6/7/n12169023.md#1">大量海外新西兰人计划在回国之前买房</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/31/n10602910.md#1" target="_blank">【还原史实】“三反五反”掠夺企业主 引爆自杀潮</a></li><li><a href="https://github.com/wfruxc2424/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/9/28/n4538256.md#1" target="_blank">硅谷工程师修炼法轮功 无病一身轻</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/14/n11257087.md#1" target="_blank">【征文】凌晓辉：贞洁论（三）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/28/n11286029.md#1" target="_blank">祝贺法轮大法日 密西根州再发特殊褒奖令</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/wfruxc2424/djy/blob/master/gb/20/4/20/n12045614.md#1">【内幕】危及习近平 孙力军案堪比周永康</a></li>
-<li><a href="https://github.com/wfruxc2424/djy/blob/master/gb/20/4/21/n12047939.md#1">传金正恩手术后病危 韩国官媒称无异常动静</a></li>
-<li><a href="https://github.com/wfruxc2424/djy/blob/master/gb/20/4/21/n12047737.md#1">【独家】中共密件承认哈尔滨疫情失控</a></li>
-<li><a href="https://github.com/wfruxc2424/djy/blob/master/gb/20/4/21/n12048117.md#1">传孙力军4月初深夜被抓 其秘书司机一并被捕</a></li>
-<li><a href="https://github.com/wfruxc2424/djy/blob/master/gb/20/4/20/n12047482.md#1">中共司法部长傅政华卸任部党组副书记</a></li>
-<li><a href="https://github.com/wfruxc2424/djy/blob/master/gb/20/4/20/n12046904.md#1">卡卡捧谭德塞遭批 其母亲与WHO关系被起底</a></li>
-<li><a href="https://github.com/wfruxc2424/djy/blob/master/gb/20/4/19/n12044473.md#1">Lady Gaga吹捧谭德赛是巨星 网友批脑袋卡卡</a></li>
-<li><a href="https://github.com/wfruxc2424/djy/blob/master/gb/20/4/19/n12043178.md#1">怕狗的人收养怕人的狗 结局感动人和狗</a></li>
-<li><a href="https://github.com/wfruxc2424/djy/blob/master/gb/20/4/20/n12045923.md#1">美国小狗偷戴主人的假牙 让他笑翻了</a></li>
-<li><a href="https://github.com/wfruxc2424/djy/blob/master/gb/20/4/20/n12046991.md#1">隔离14天胖到80公斤 陈伟霆：快崩溃</a></li>
-<li><a href="https://github.com/wfruxc2424/djy/blob/master/gb/20/4/19/n12044305.md#1">宝玉和黛玉的人间再相逢</a></li>
-<li><a href="https://github.com/wfruxc2424/djy/blob/master/gb/20/4/12/n12025238.md#1">【历史上的瘟疫】打垮拿破仑的重型瘟疫</a></li>
-<li><a href="https://github.com/wfruxc2424/djy/blob/master/gb/20/4/19/n12043793.md#1">迷于幻境之中 修道人一念之间功亏一篑</a></li>
-<li><a href="https://github.com/wfruxc2424/djy/blob/master/gb/20/4/14/n12029632.md#1">重读希腊神话《帕里斯的裁判》：我们忽略了谁？</a></li>
-<li><a href="https://github.com/wfruxc2424/djy/blob/master/gb/20/4/19/n12043540.md#1">【历史回眸】清末多灾 报纸讲真话 促变局</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/21/n11962082.md#1">【最新疫情3.22】川普启动三州国民警卫队</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11962674.md#1">意大利口罩被谁买空？意媒驳中共救援谎言</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11962341.md#1">对北京掩盖疫情失望 川普：中共非常诡秘</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11963263.md#1">【一线采访】武汉市民：对政府彻底失望</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11962520.md#1">企业家吁召开紧急会议 矛头直指中共最高层</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/23/n11965271.md#1">刘真惊传病逝 留下4岁女儿 享年44岁　</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11963031.md#1">胞弟成为台湾女婿 瑞莎曝婚礼照喊开心</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11959416.md#1">众星遭陆“限籍令”点名 台湾艺人揭中共套路</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/23/n11966011.md#1">刘真44岁辞世 演艺圈好友不舍</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/21/n11962008.md#1">好莱坞制作人瓦特染疫：身体像被巴士撞到</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/2/n11909598.md#1">【命理】长寿的命怎样看？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/11/n11933384.md#1">断臂僧转世？小蛮童有胆 向康熙帝要官职</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11945807.md#1">2020 否极泰来</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11964127.md#1">后悔或是一味良药 但须在大限前</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/21/n11961878.md#1">【历史回眸】人们忘记神 这就是一切的起因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/wfruxc2424/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/wfruxc2424/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/10/31/n11623612.htm">专家：奥克兰房市将回暖 或带动全国房价</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/10/31/n11623612.htm">专家：奥克兰房市将回暖 或带动全国房价</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/wfruxc2424/djy/blob/master/gb/19/10/31/n11623612.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/wfruxc2424/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfruxc2424/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/wfruxc2424/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/wfruxc2424/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/wfruxc2424/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfruxc2424/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/wfruxc2424/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfruxc2424/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/wfruxc2424/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfruxc2424/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/wfruxc2424/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfruxc2424/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/wfruxc2424/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfruxc2424/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/wfruxc2424/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfruxc2424/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/wfruxc2424/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfruxc2424/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/wfruxc2424/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfruxc2424/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/wfruxc2424/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfruxc2424/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/wfruxc2424/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfruxc2424/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/wfruxc2424/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfruxc2424/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/wfruxc2424/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfruxc2424/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/wfruxc2424/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfruxc2424/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/wfruxc2424/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfruxc2424/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/wfruxc2424/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfruxc2424/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/wfruxc2424/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfruxc2424/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/wfruxc2424/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfruxc2424/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/wfruxc2424/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfruxc2424/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/wfruxc2424/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfruxc2424/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/wfruxc2424/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfruxc2424/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/wfruxc2424/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfruxc2424/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/wfruxc2424/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfruxc2424/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/19/10/31/n11623612.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
